# rivendell

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
algorithms/: Pipfile  bfs.py  dijkstra.py  greedy.py  search.py  sort.py  test_search.py  test_sort.py
asyncreturn/: README.md  asyncreturn.py
copyextension/: README.md  copyextension.py
cv/: .gitignore  Pipfile  README.md  always_blue.py  change_color_component.py  change_green_component.py  change_with_jump.py  color_system.py  crop.py  draw.py  equalize_histogram.py  flip.py  green_slice.py  histogram.py  histogram_color.py  mask.py  merge_channels.py  metadata.py  pallete.py  pallete_improved.py  pixel.py  pyproject.toml  rectangles.py  resize.py  resize_slice.py  rotate.py  split_channels.py  text.py
dataanalysis/: Jupyter Notebook.ipynb  Pipfile  README.md  Series.ipynb  requirements.txt
dockerize/: Pipfile  README.md  dockerize.py  pyproject.toml  run.py
fastapi-playground/: README.md  main.py  pyproject.toml
headless_selenium/: .travis.yml  LICENSE  headless_chrome.py  headless_firefox.py
hiding_message_in_an_image/: README.md
learningopencv/: .gitignore  Lupi.AVI  Pipfile  README.md  abs.py  absdiff.py  add.py  avivideo.py  camera.py  cannyreduce.py  image.py  logpolar.py  pyproject.toml  simple_transformation.py  trackbar.py  videorgb2gray.py  writeavi.py
lights_out/: README.md  lights_out.py
love/: README.md  love.go  love.py
multistagepython/: Dockerfile.step1  Dockerfile.step2  Dockerfile.step3  Dockerfile.step4  Dockerfile.step5  README.md  example_pandas.py
nest-playground/: .gitignore  README.md  package-lock.json  package.json
nest-playground/nest-playground/: package-lock.json  package.json
nest-playground/src/: app.module.ts  main.ts
nest-playground/src/cats/: cats.controller.spec.ts  cats.controller.ts  cats.module.ts  cats.service.ts
onelinechristmas/: README.md  colorized.py  formatchristmas.py  onelinechristmas.py
orderdictbyvalue/: README.md  ord.py
paulinhaclass/: Pipfile  README.md  class01.ipynb  requirements.txt  tabela.csv
pyenvpipenv/: Pipfile  README.md
roman/: README.md  __init__.py
selenium_tricks/: README.md  requirements.txt
selenium_tricks/download_files_headless/: README.md  app.py  chrome_example.py
selenium_tricks/headless/: README.md  chrome_example.py  firefox_example.py
selenium_tricks/headless_selenium/: README.md  headless_firefox.py  requirements-dev.txt
selenium_tricks/seleniumdownload/: README.md  firefox_example.py  requirements.txt
selenium_tricks/test_api/: app.py
selenium_tricks/test_api/templates/: base.html  hello.html  list_files.html
seleniumdownload/: Dockerfile  README.md  main.py
snake_game/: README.md  jogo.py
summation/: README.md  summation.py
toxpipenv/: MANIFEST  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
toxpipenv/tests/: test_core.py
toxpyenv/: MANIFEST  README.md  setup.py
toxpyenv/tests/: test_core.py
toxpyenv/toxpyenv/: core.py
xlsx2csv/: Pipfile  README.md  example_xlsx.xlsx  pyproject.toml  xlsx2csv.py
(+3 files in other folders)
