[project]
name = "rivendell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docker>=7.1.0",
    "matplotlib>=3.11.0",
    "notebook>=7.6.0",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pygame>=2.6.1",
]
