[tool.poetry]
name = "fastapi-playground"
version = "0.1.0"
description = ""
authors = ["cassiobotaro <cassiobotaro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.120.3"
uvicorn = "^0.38.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
