[tool.poetry]
name = "learningopencv"
version = "0.1.0"
description = ""
authors = ["cassiobotaro <cassiobotaro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
