[tool.poetry]
name = "toxpipenv"
version = "0.1.0"
description = ""
authors = ["cassiobotaro <cassiobotaro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
tox = "^4.0.16"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
